# mai_oop

lab_1/: CMakeLists.txt  README.md
lab_1/include/: PalindromeChecker.hpp
lab_1/src/: PalindromeChecker.cpp  main.cpp
lab_1/test/: CMakeLists.txt  PalindromeCheckerTest.cpp
